fix: render content only

--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <textarea id="source">
-      {{ posts.content }}
+      {{ content }}
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
